--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    compile project(':submodules:watchface-gears:library')
     compile 'com.google.android.support:wearable:+'
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.jakewharton:butterknife:5.1.+'
