--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -34,7 +34,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("release-keystore.jks")
+            storeFile file("../tt-release-keystore.jks")
             keyAlias 'PROMPT_DEV'
             storePassword 'PROMPT_DEV'
             keyPassword 'PROMPT_DEV'
