--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:allowBackup="true"
-        android:icon="@drawable/preview"
+        android:icon="@drawable/icon"
         android:label="${appName}"/>
 
 </manifest>
