Convert project to new sdk (untested)

--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -4,6 +4,10 @@ buildscript {
     }
 }
 
+repositories {
+    mavenLocal()
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'hugo'
 
@@ -57,9 +61,10 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.support:wearable:1.0.00'
     compile project(':submodules:watchface-gears:library')
     compile 'com.jakewharton:butterknife:5.1.+'
     compile 'com.jakewharton.timber:timber:2.4.+'
 }
 
-apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
