--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -3,25 +3,49 @@
     package="com.twotoasters.chron">
 
     <uses-feature android:name="android.hardware.type.watch" />
+
     <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:label="${appName}"
         android:name=".WatchfaceApp">
-        <activity
-            android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
-            android:name=".activity.WatchfaceActivity"
+
+        <!--<activity-->
+            <!--android:theme="@android:style/Theme.DeviceDefault.NoActionBar"-->
+            <!--android:name=".activity.WatchfaceActivity"-->
+            <!--android:label="${watchfaceName}"-->
+            <!--android:allowEmbedded="true" >-->
+
+            <!--<meta-data android:name="com.google.android.clockwork.home.preview" android:resource="@drawable/preview" />-->
+
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="com.google.android.clockwork.home.category.HOME_BACKGROUND" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <service
+            android:name=".ChronWatchFace"
+            android:allowEmbedded="true"
+            android:enabled="true"
             android:label="${watchfaceName}"
             android:taskAffinity=""
-            android:allowEmbedded="true" >
-
-            <meta-data android:name="com.google.android.clockwork.home.preview" android:resource="@drawable/preview" />
-
+            android:permission="android.permission.BIND_WALLPAPER">
+            <meta-data
+                android:name="com.google.android.clockwork.home.preview"
+                android:resource="@drawable/preview" />
+            <meta-data
+                android:name="android.service.wallpaper"
+                android:resource="@xml/dummy" />
             <intent-filter>
+                <action android:name="android.service.wallpaper.WallpaperService" />
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="com.google.android.clockwork.home.category.HOME_BACKGROUND" />
+                ￼￼          <category
+                android:name="com.google.android.wearable.watchface.category.HOME_BACKGROUND" />
             </intent-filter>
-        </activity>
+        </service>
+
     </application>
 
 </manifest>
