--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,6 +5,24 @@
 
     <application android:allowBackup="true"
         android:icon="@drawable/icon"
-        android:label="${appName}"/>
+        android:label="${appName}">
+
+        <service
+            android:name=".ChronLiveWallpaper"
+            android:enabled="true"
+            android:label="@string/wallpaper_title"
+            android:permission="android.permission.BIND_WALLPAPER" >
+            <intent-filter>
+                <action android:name="android.service.wallpaper.WallpaperService" >
+                </action>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.service.wallpaper"
+                android:resource="@xml/chron_wallpaper" >
+            </meta-data>
+        </service>
+
+    </application>
 
 </manifest>
