Update to latest SDK and draw more of the watch programmatically

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -63,4 +63,4 @@ dependencies {
     compile 'com.android.support:support-annotations:21.0.0'
 }
 
-//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
