--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -4,10 +4,6 @@ buildscript {
     }
 }
 
-repositories {
-    mavenLocal()
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'hugo'
 
@@ -39,8 +35,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     signingConfigs {
@@ -62,8 +58,9 @@ android {
 
 dependencies {
     compile project(':common')
-    compile project(':submodules:watchface-gears:library')
-    compile 'com.google.android.support:wearable:1.0.00'
+    compile 'com.google.android.support:wearable-support:1.1+:@aar'
+    compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
 }
 
-//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
