Add settings syncing

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,5 +19,6 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:support-annotations:21.0.0'
 }
