--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -60,7 +60,9 @@ dependencies {
     wearApp project(':wear')
     compile project(':common')
     compile files('libs/GLWallpaperService.jar')
+    compile 'com.google.android.support:wearable-support:1.1+:@aar'
+    compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:support-annotations:21.0.0'
 }
 
-apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
