--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,14 +1,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.twotoasters.chron">
 
+    <!-- Permissions required by the wearable app -->
     <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="${appName}">
 
+        <activity
+            android:name=".activity.ChronWatchFaceCompanionConfigActivity"
+            android:label="${appName}">
+            <intent-filter>
+                <action android:name="com.twotoasters.chron.CONFIG_CHRON" />
+                <category android:name="com.google.android.wearable.watchface.category.COMPANION_CONFIGURATION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <service
-            android:name=".ChronLiveWallpaper"
+            android:name=".service.ChronLiveWallpaper"
             android:enabled="true"
             android:label="@string/wallpaper_title"
             android:permission="android.permission.BIND_WALLPAPER" >
@@ -24,7 +39,7 @@
         </service>
 
         <service
-            android:name=".ChronLiveWallpaperGL"
+            android:name=".service.ChronLiveWallpaperGL"
             android:enabled="true"
             android:label="@string/wallpaper_title_gl"
             android:permission="android.permission.BIND_WALLPAPER" >
