--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -13,13 +13,13 @@ def versionPatch = Integer.parseInt(APP_VERSION_PATCH)
 def versionBuild = Integer.parseInt(APP_VERSION_BUILD)
 
 android {
-    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION_WEAR)
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
         applicationId project.PACKAGE_NAME
         minSdkVersion Integer.parseInt(ANDROID_BUILD_MIN_SDK_VERSION_WEAR)
-        targetSdkVersion Integer.parseInt(ANDROID_BUILD_TARGET_SDK_VERSION)
+        targetSdkVersion Integer.parseInt(ANDROID_BUILD_TARGET_SDK_VERSION_WEAR)
         versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}"
         manifestPlaceholders = [ watchfaceName:project.WATCHFACE_NAME, appName:project.APP_NAME ]
@@ -63,4 +63,4 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0'
 }
 
-apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
