--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:label="${appName}">
 
         <activity
-            android:name=".activity.ChronWatchFaceConfigActivity"
+            android:name=".activity.ChronWatchFaceWearConfigActivity"
             android:label="@string/config_label">
             <intent-filter>
-                <action android:name="com.example.android.wearable.watchface.CONFIG_CHRON" />
+                <action android:name="com.twotoasters.chron.CONFIG_CHRON" />
                 <category android:name="com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <meta-data android:name="com.google.android.gms.version"
-               android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version" />
 
         <service
             android:name=".service.ChronWatchFaceService"
@@ -37,13 +37,19 @@
                 android:resource="@drawable/preview" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.companionConfigurationAction"
-                android:value="com.example.android.wearable.watchface.CONFIG_CHRON" />
+                android:value="com.twotoasters.chron.CONFIG_CHRON" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
-                android:value="com.example.android.wearable.watchface.CONFIG_CHRON" />
+                android:value="com.twotoasters.chron.CONFIG_CHRON" />
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" />
                 <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".service.ChronWatchFaceConfigListenerService">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
 
