--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
-    <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
 
     <application
-        android:label="${appName}">
+        android:label="${appName}"
+        android:name=".ChronApp">
 
         <activity
-            android:name=".activity.ChronWatchFaceWearConfigActivity"
+            android:name=".activity.ChronWearConfigActivity"
             android:label="@string/config_label">
             <intent-filter>
                 <action android:name="com.twotoasters.chron.CONFIG_CHRON" />
