--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:support-annotations:21.0.0'
+    compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.jakewharton:butterknife:6.0.+'
+    compile 'com.jakewharton.timber:timber:2.5.+'
 }
