--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,15 @@ WATCHFACE_NAME=Chron
 APP_NAME=Chron Watchface
 PACKAGE_NAME=com.twotoasters.chron
 
-ANDROID_BUILD_TOOLS_VERSION=21.0.0
-
+ANDROID_BUILD_TOOLS_VERSION=21.1.1
 ANDROID_BUILD_SDK_VERSION=21
 ANDROID_BUILD_TARGET_SDK_VERSION=21
 ANDROID_BUILD_MIN_SDK_VERSION=18
-
-ANDROID_BUILD_SDK_VERSION_WEAR=21
-ANDROID_BUILD_TARGET_SDK_VERSION_WEAR=21
 ANDROID_BUILD_MIN_SDK_VERSION_WEAR=21
 
 APP_VERSION_MAJOR = 1
-APP_VERSION_MINOR = 0
+APP_VERSION_MINOR = 1
 APP_VERSION_PATCH = 0
 APP_VERSION_BUILD = 0
+
+PROGUARD_DEBUG_BUILDS = false
