--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -12,6 +12,10 @@ def versionMinor = Integer.parseInt(APP_VERSION_MINOR)
 def versionPatch = Integer.parseInt(APP_VERSION_PATCH)
 def versionBuild = Integer.parseInt(APP_VERSION_BUILD)
 
+repositories {
+    jcenter()
+}
+
 android {
     compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
@@ -60,6 +64,8 @@ dependencies {
     wearApp project(':wear')
     compile project(':common')
     compile files('libs/GLWallpaperService.jar')
+    compile 'com.afollestad:material-dialogs:0.3.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.google.android.support:wearable-support:1.1+:@aar'
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:support-annotations:21.0.0'
