--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -60,6 +60,7 @@ android {
 
 dependencies {
     compile project(':common')
+    compile project(':submodules:watchface-gears:library')
     compile 'com.google.android.support:wearable-support:1.1+:@aar'
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:recyclerview-v7:21.0.0'
