--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -68,9 +68,9 @@ dependencies {
     compile files('libs/GLWallpaperService.jar')
     compile 'com.afollestad:material-dialogs:0.3.0'
     compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.google.android.support:wearable-support:1.1+:@aar'
+    compile 'com.google.android.support:wearable:1.1.+'
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:support-annotations:21.0.0'
 }
 
-//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
