--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -61,9 +61,9 @@ android {
 dependencies {
     compile project(':common')
     compile project(':submodules:watchface-gears:library')
-    compile 'com.google.android.support:wearable-support:1.1+:@aar'
+    compile 'com.google.android.support:wearable:1.1.+'
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.android.support:recyclerview-v7:21.0.0'
 }
 
-//apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
+apply from: 'https://raw.github.com/twotoasters/HelloAndroidStudio/master/gradle/keystore.gradle'
