--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
         <activity
             android:name=".activity.ChronCompanionConfigActivity"
-            android:label="${appName}">
+            android:label="Chron Watch Face Settings">
             <intent-filter>
                 <action android:name="com.twotoasters.chron.CONFIG_CHRON" />
                 <category android:name="com.google.android.wearable.watchface.category.COMPANION_CONFIGURATION" />
